--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "App to create video ideas",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app"
   },
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.4"
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "express": "^4.15.4",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.6.3",
+    "nodemon": "^1.19.1"
   }
 }
