--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.15.4",
@@ -17,6 +18,8 @@
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.3",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
