--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "App to create video ideas",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app"
+    "dev": "nodemon app",
+    "start": "node app.js"
   },
   "author": "Brad Traversy",
   "license": "MIT",
