--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vidjot",
   "version": "1.0.0",
-  "description": "App to create video ideas",
+  "description": "App to register ideas",
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app",
     "start": "node app.js"
   },
-  "author": "Brad Traversy",
+  "author": "Alberto Carriches",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
